<resources>
    <string name="app_name">MyStation</string>

    <!--zeal string-->

    <!--main-->
    <string name="map">地图</string>
    <string name="about">关于</string>

    <string name="scale_btn_des">点击按钮切换移动距离</string>
    <string name="text_btn_des">点击按钮切换textview</string>
    <string name="connect">连接</string>
    <string name="return_to_launch">返航</string>
    <string name="kill">强制结束</string>
    <string name="takeoff">起飞</string>
    <string name="land">降落</string>
    <string name="camera">图传</string>

    <string name="forward">前进</string>
    <string name="backward">后退</string>
    <string name="leftward">向左</string>
    <string name="rightward">向右</string>
    <string name="upward">上升</string>
    <string name="downward">下降</string>
    <string name="multiply">放大</string>
    <string name="divide">缩小</string>

    <string name="takepic">拍照</string>
    <string name="start_record">开始录像</string>
    <string name="stop_record">停止录像</string>
    <string name="focus">对焦</string>
    <string name="resolution">分辨率</string>

    <string name="how_to_use">
        本软件需要使用支持MAVLink协议的飞控、WiFi数传；图传功能为一单独模块，使用UVC摄像头，发送端放置在无人机上，接收端通过OTG连接到手机端。控制软件时需要先点“连接”，然后点“起飞”，即可移动。
    </string>
    <string name="author">制作者：曾子昕</string>
    <string name="mail">Mail: zzxnow@foxmail.com</string>
    <string name="present">Proudly present by ----ZEAL----</string>
    <string name="introduction">无人机地面站软件介绍</string>
</resources>