<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_kill"
        android:icon="@drawable/kill"
        app:showAsAction="ifRoom|collapseActionView"
        android:orderInCategory="0"
        android:title="@string/kill">
    </item>
    <item
        android:id="@+id/btn_return_to_launch"
        android:icon="@drawable/return_to_launch"
        app:showAsAction="ifRoom|collapseActionView"
        android:orderInCategory="1"
        android:title="@string/return_to_launch">
    </item>
    <item
        android:id="@+id/btn_connect"
        app:showAsAction="never"
        android:orderInCategory="2"
        android:title="@string/connect">
    </item>
    <item
        android:id="@+id/btn_takeoff"
        app:showAsAction="never"
        android:orderInCategory="3"
        android:title="@string/takeoff">
    </item>
    <item
        android:id="@+id/btn_land"
        app:showAsAction="never"
        android:orderInCategory="4"
        android:title="@string/land">
    </item>

    <item
        android:id="@+id/btn_camera"
        app:showAsAction="never"
        android:orderInCategory="5"
        android:title="@string/camera">
    </item>

    <item
        android:id="@+id/btn_about"
        app:showAsAction="never"
        android:orderInCategory="6"
        android:title="@string/about">
    </item>

</menu>